--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ networkx==2.5
 notebook==6.2.0
 numpy==1.19.5
 packaging==20.8
+pandas==1.2.1
 pandocfilters==1.4.3
 parso==0.8.1
 pexpect==4.8.0
@@ -48,9 +49,12 @@ pygraphviz==1.6
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+pytz==2020.5
 pyzmq==21.0.1
 qtconsole==5.0.1
 QtPy==1.9.0
+scipy==1.6.0
+seaborn==0.11.1
 Send2Trash==1.5.0
 six==1.15.0
 terminado==0.9.2
